--- a/player/build.gradle
+++ b/player/build.gradle
@@ -41,13 +41,19 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    api files("libs/AlivcPlayer-3.4.7.aar")
+    api files("libs/AlivcReporter-1.2.aar")
+    api files("libs/AliyunVodPlayer-3.4.7.aar")
+
     implementation libs.support_v7
     implementation libs.recyclerview
-    implementation libs.design
     implementation libs.constraint
-    implementation libs.flexbox
 
     implementation libs.kotlin_stdlib
 
     implementation libs.rhine_core
+
+    kapt libs.arch_comp_room_compiler
+    kapt libs.arch_comp_compiler
+    kapt libs.glide_compiler
 }
