--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="com.github.qingmei2.rhinevideoplayer">
+          package="com.github.qingmei2.core">
 
     <application
-            android:name=".base.BaseApplication"
+            android:name="com.github.qingmei2.core.base.BaseApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -13,10 +13,10 @@
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".ui.MainActivity"/>
+        <activity android:name="com.github.qingmei2.core.ui.MainActivity"/>
 
         <activity
-                android:name=".ui.login.LoginActivity">
+                android:name="com.github.qingmei2.core.ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
